--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -9,6 +9,7 @@ app-search {
 .nav-section {
   padding-right: 15px;
   border-right: 1px solid white;
+  margin-left: 100px;
 }
 
 .example-spacer {
