work with user data

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -25,11 +25,8 @@
     </div>
 
     <div fxLayout="row wrap" fxLayoutAlign="center center">
- 
-
-       
-
-       <button mat-raised-button class="loguot" (click)="logout()" >Выйти</button>
+      <span>ArtemO</span>
+      <button mat-raised-button class="loguot" (click)="logout()">Выйти</button>
     </div>
    
   </mat-toolbar-row>
