--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -3,29 +3,26 @@
     <div fxLayout="row wrap" fxLayoutAlign="center center">
       <div class="logo-wrapp" routerLink="/main">
         <img src="assets/logo.jpg" alt="">
-      </div> 
-      <!-- <div> -->
-        <div class="nav-section">
-          <a 
-            mat-button 
-            *ngFor="let link of links" 
-            [routerLink]="link.path" 
-            [routerLinkActive]="link.active"
-            (click)="clearPageCounter(link.page)">       
-            <span>{{link.label}}</span>
-          </a>
-        
-        </div>
-
-        <app-search></app-search>
-
-        
-      <!-- </div> -->
+      </div>      
+      <div class="nav-section">
+        <a 
+          mat-button 
+          *ngFor="let link of links" 
+          [routerLink]="link.path" 
+          [routerLinkActive]="link.active"
+          (click)="clearPageCounter(link.page)">       
+          <span>{{link.label}}</span>
+        </a>
+        <a routerLinkActive="button-active" routerLink="/favorites" mat-button>
+          <span>Избранные</span>
+        </a>        
+      </div>
+      <app-search></app-search>         
 
     </div>
 
     <div fxLayout="row wrap" fxLayoutAlign="center center">
-      <div>
+      <div class="user">
         <span class="avatar">{{ username | slice:0:1 }}</span>
         <span class="username">{{username}}</span>
       </div>
