--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -1,5 +1,5 @@
 app-search {
-  margin-left: 35px;
+  margin-left: 30px;
 }
 
 .header {
@@ -17,20 +17,54 @@ app-search {
 }
 
 .mat-button {
-  margin: 0 5px;
+  margin: 0 2.5px;
   font-weight: 400;
   transition: all 1s;
+  line-height: 30px;
+  padding: 0 10px;
   &:hover {
     background: rgba(253, 255, 250, 0.2);
     transition: all .5s;
   }
 }
 
-
+.favorites {
+  svg {
+    path:last-child {
+      fill: #f4f4f4;
+    }
+  }
+}
 
 .button-active {  
   background: rgba(253, 255, 250, 0.1)
 }
+
+.user {
+  display: flex;
+  align-items: center;
+
+  .avatar {
+    font-weight: 600;
+    font-size: 1.8vw;
+    color: #444449;
+    background: #f4f4f4;
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: inset 0px 0px 3px 0px #000;
+  }
+
+  .username {
+    margin-left: 10px;
+    font-weight: 600;
+    font-size: 1.2vw;
+  }
+}
+
 
 
 
