--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -121,7 +121,13 @@ router-outlet~* {
   }
 }
 
-
+app-search {
+  margin-left: 30px;
+  .mat-flat-button {    
+    line-height: 30px;
+    padding: 0 10px;
+  }
+}
 
 
 
