--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -28,13 +28,26 @@ app-search {
   }
 }
 
-.favorites {
-  svg {
-    path:last-child {
-      fill: #f4f4f4;
-    }
-  }
-}
+// .favorites {
+//   position: relative;
+//   div {
+//     position: absolute;
+//     top: -10px;
+//     right: 0;
+//     width: 20px;
+//     height: 20px;
+//     background: #f4f4f4;
+//     border-radius: 50%;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     span {
+//       line-height: 1;
+//       font-size: 12px;
+//       color: #444449;
+//     }
+//   }
+// }
 
 .button-active {  
   background: rgba(253, 255, 250, 0.1)
