--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -35,7 +35,7 @@
           <i class="material-icons">favorite_border</i>
         </button>
         <ng-template #marked>
-          <button mat-icon-button (click)="addToFavorites()" color="accent">
+          <button mat-icon-button (click)="addToFavorites()" color="warn">
             <i class="material-icons">favorite</i>
           </button>
         </ng-template>
