add counter favorite films

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -18,7 +18,7 @@
           routerLink="/favorites" 
           mat-button 
           class="favorites" 
-          [matBadge]="totalResult" 
+          [matBadge]="totalResult$ | async" 
           matBadgeColor="warn">
          <span>Мои избранные</span>  
         </a>        
