--- a/practice/src/app/auth/login/login.component.scss
+++ b/practice/src/app/auth/login/login.component.scss
@@ -66,7 +66,7 @@
             flex-direction: column;
         }
 
-        button {
+        .enter-btn {
             margin-top: 20px;
             background-color: #009aff;
         }
