--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -30,7 +30,9 @@
 
         <mat-form-field class="example-full-width">
           <input matInput placeholder="Пароль" formControlName="password" [type]="hide ? 'password' : 'text'">
-
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
           <mat-error *ngIf="f.password.invalid">{{getErrorMessageForPassword()}} </mat-error>
         </mat-form-field>
 
