fix a bit pass field on login form

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -33,7 +33,9 @@
         <span class="username">{{username}}</span>
       </div>
       
-      <button mat-raised-button class="loguot" (click)="logout()">Выйти</button>
+      <button mat-icon-button class="loguot" (click)="logout()">
+        <i class="material-icons">exit_to_app</i>
+      </button>
     </div>
    
   </mat-toolbar-row>
