--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -95,7 +95,9 @@ app-search {
 }
 
 .loguot {
-  background: red;
-  color: white;
+  // background: red;
+  // color: white;
+  // font-size: 24px;
   margin-left: 50px;
 }
+
