work wirh route on favotites page

--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -1,45 +1,36 @@
-  <div class='cards'>
+<div class="cards">
     <div>
-      <img src="{{imgUrl + film.poster_path}}" alt="">
+        <img src="{{ imgUrl + film.poster_path }}" alt="" />
     </div>
-    <div class='info'>
-      <h2>{{film.title}}</h2>
-      <p class='year'>{{film.release_date}}</p>
-      <p class="description">
-        {{ (film.overview.length > 180) ? (film.overview | slice:0:180) + '...' : (film.overview) }}</p>
-      <mat-card-actions>
-        <button 
-          mat-icon-button 
-          *ngIf="!film.isBooked; else booked" 
-          (click)="addToBooked()"
-        >
-          <i class="material-icons">bookmark_border</i>
-        </button>
-        <ng-template #booked>
-          <button 
-            mat-icon-button 
-            (click)="addToBooked()" 
-            color="primary"
-          >
-            <i class="material-icons">bookmark</i>
-          </button>
-        </ng-template>
-        <a mat-icon-button (click)="getDetails()">
-          <i class="material-icons">menu</i>          
-        </a>
-        <button 
-          mat-icon-button 
-          *ngIf="!film.isFavorite; else marked" 
-          (click)="addToFavorites()"
-        >
-          <i class="material-icons">favorite_border</i>
-        </button>
-        <ng-template #marked>
-          <button mat-icon-button (click)="addToFavorites()" color="warn">
-            <i class="material-icons">favorite</i>
-          </button>
-        </ng-template>
-      </mat-card-actions>
-    </div>
-  </div>
+    <div class="info">
+        <h2>{{ film.title }}</h2>
+        <p class="year">{{ film.release_date }}</p>
+        <p class="description">
+            {{ film.overview.length > 180 ? (film.overview | slice: 0:180) + '...' : film.overview }}
+        </p>
+        <mat-card-actions *ngIf="favorites">
+            <button mat-icon-button *ngIf="!film.isBooked; else booked" (click)="addToBooked()">
+        <i class="material-icons">bookmark_border</i>
+      </button>
 
+            <ng-template #booked>
+                <button mat-icon-button (click)="addToBooked()" color="primary">
+          <i class="material-icons">bookmark</i>
+        </button>
+            </ng-template>
+
+            <a mat-icon-button (click)="getDetails()">
+                <i class="material-icons">menu</i>
+            </a>
+
+            <button mat-icon-button *ngIf="!film.isFavorite; else marked" (click)="addToFavorites()">
+        <i class="material-icons">favorite_border</i>
+      </button>
+            <ng-template #marked>
+                <button mat-icon-button (click)="addToFavorites()" color="warn">
+          <i class="material-icons">favorite</i>
+        </button>
+            </ng-template>
+        </mat-card-actions>
+    </div>
+</div>
