--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -1,66 +1,61 @@
-
-
 .cards {
-  background: #fff;
-  display: flex;
-  border-radius: 4px;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
-              0 1px 1px 0 rgba(0, 0, 0, .14),
-              0 1px 3px 0 rgba(0, 0, 0, .12);
-  height: 200px;
+    background: #fff;
+    display: flex;
+    border-radius: 4px;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
+    height: 200px;
 }
 
 .cards div:first-child {
-  width: 45%;
-  display: flex;
+    width: 45%;
+    display: flex;
 }
 
 .cards div:last-child {
-  width: 55%;
+    width: 55%;
 }
 
 .cards img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .info {
-  padding: 2%;
-  position: relative;
-  text-align: left;
+    padding: 2%;
+    position: relative;
+    text-align: left;
 }
 
 h2 {
-  margin: 0;
-  font-size: 1vw;
+    margin: 0;
+    font-size: 1vw;
 }
 
 .year {
-  font-size: .8em;
-  font-weight: 900;
-  margin: .25em 0;
-  color: silver;
+    font-size: .8em;
+    font-weight: 900;
+    margin: .25em 0;
+    color: silver;
 }
 
 .description {
-  font-size: 9px;
+    font-size: 9px;
 }
 
 .btn-block {
-  width: 100% !important;
-  position: absolute;
-  bottom: 5px;
-  left: 0;
-  display: flex;
+    width: 100% !important;
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    display: flex;
 }
 
-
-
 .mat-card-actions {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  margin-bottom: 0;
-  text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
 }
