--- a/practice/src/app/films-catalog/actors-list/actors-list.component.html
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.html
@@ -1,24 +1,23 @@
 <div *ngIf="!spiner" class="cards-section">
 
-  <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-    <h2>{{totalResalt}} актеров</h2>
-    <div>
-      <p>Страница: {{pageCount}} из {{totalPages}}</p>
-      <button mat-raised-button (click)="firstPage()">в начало</button>
+    <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <h2>{{totalResult}} актеров</h2>
+        <div>
+            <p>Страница: {{pageCount}} из {{totalPages}}</p>
+            <button mat-raised-button (click)="firstPage()">в начало</button>
+        </div>
     </div>
-  </div>
 
-  <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-    <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
-      *ngFor="let actor of actors">
-    </app-actor-item>
+    <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+        <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor" *ngFor="let actor of actors">
+        </app-actor-item>
 
-    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-      <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>
+        <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+            <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>
         Показать еще
       </button>
+        </div>
     </div>
-  </div>
 </div>
 
 <app-spiner *ngIf="spiner"></app-spiner>
