--- a/practice/src/app/shared/components/film-details/film-details.component.scss
+++ b/practice/src/app/shared/components/film-details/film-details.component.scss
@@ -107,3 +107,15 @@
   margin-bottom: 0;
   text-align: center;
 }
+
+  .btn-back {
+    position: absolute;    
+    right: 3.5%;
+    top: 2.5%;
+    opacity: .2;
+    cursor: pointer;
+    transition: opacity .5s;
+    &:hover {
+      opacity: 1;
+    }
+  }
