--- a/practice/src/app/shared/components/film-details/film-details.component.scss
+++ b/practice/src/app/shared/components/film-details/film-details.component.scss
@@ -1,20 +1,27 @@
 .cards {
   background: #fff;
   display: flex;
+  flex-direction: column;
   border-radius: 4px;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
     0 1px 1px 0 rgba(0, 0, 0, .14),
     0 1px 3px 0 rgba(0, 0, 0, .12);
   width: 90%;
-  margin: auto;
+  margin: 20px auto;
 }
 
-.cards>div:first-child {
+.cards > section:first-child {
+  width: 100%;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.cards > section:first-child div:first-child {
   width: 45%;
   display: flex;
 }
 
-.cards>div:last-child {
+.cards > section:first-child div:last-child {
   width: 55%;
 }
 
