--- a/practice/src/app/shared/components/film-details/film-details.component.html
+++ b/practice/src/app/shared/components/film-details/film-details.component.html
@@ -49,96 +49,31 @@
 
 
     <section>
-    <mat-tab-group dynamicHeight>
-      <mat-tab label="Актеры">
-            <div class='info'>
-              <div class="title">
-                <h2>{{film.title}}</h2>
+      <mat-tab-group dynamicHeight>
+        <mat-tab label="Актеры" >
+          <div class="actors" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+            <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor" *ngFor="let actor of casts"></app-actor-item>
+          </div>     
 
-                <div class="popularity-circle">
-                  <div class="popularity">
-                    <label>{{film.vote_average}}</label>
-                    <mat-progress-spinner class="example-margin" [mode]="mode" [value]="film.vote_average * 10">
-                    </mat-progress-spinner>
-                  </div>
-                </div>
-              </div>
-              <p class='year'>{{film.release_date | date: 'dd MMMM yyyy'}}</p>
-              <p class="genre">Жанр:
-                <span *ngFor="let genre of film.genres">
-                  <span>{{genre.name}} / </span>
-                </span>
-              </p>
-              <p class="description">
-                {{ (film.overview.length > 700) ? (film.overview | slice:0:700) + '...' : (film.overview) }}</p>
 
-              <a class="homepage" [href]="film.homepage" target="_blank">{{film.homepage}}</a>
-              <p class="budget">Бюджет фильма: {{film.budget}}$ </p>
+        </mat-tab>
 
-              <div class="production_companies">
-                <span *ngFor="let production_companie of film.production_companies">
-                  <img src="{{smallImgPath + production_companie.logo_path}}" alt="">
-                </span>
-              </div>
-              <div class="backdrop">
-                <img src="{{midBackPath + film.backdrop_path}}" alt="">
-              </div>
+        <mat-tab label="Съемочная группа">
+              
 
-              <div class="btn-back" (click)="backOnAllActor()">
-                <svg enable-background="new 0 0 48 48" height="48px" id="Layer_1" version="1.1" viewBox="0 0 48 48" width="48px"
-                  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <path
-                    d="M24,0C10.745,0,0,10.745,0,24s10.745,24,24,24s24-10.745,24-24S37.255,0,24,0z M36.804,22.238v3.033v0.479  c-0.05,0.689-0.435,2.15-2.812,2.15h-9.459c-1.744,0-1.682-1.309-1.682-1.309v-0.076c0-1.037,1.039-1.218,1.561-1.244h7.912  c1.405,0,1.699-0.684,1.75-1.117v-0.539c0-1.135-0.846-1.346-1.32-1.377h-9.902h-0.29c-1.607,0-2.113-0.866-2.27-1.506l-0.002,0.001  c0,0-0.158-0.896-1.043-0.167l-3.426,2.822c0,0-0.009,0.009-0.012,0.01l-0.05,0.041c-0.244,0.209-1.094,1.054,0.06,1.867  l2.797,1.969l0.02,0.014l1.587,1.117v-0.033l1.32,0.902c1.319,0.904,1.309,2.396,1.309,2.396v0.342c0,0-0.161,1.332-1.458,0.422  l-9.431-6.638c0,0,0-0.001-0.001-0.001c-1.721-1.211-0.004-2.668,0-2.672l8.904-7.339c1.969-1.622,1.985,0.929,1.985,0.929v1.525  c0.078,0.572,0.491,1.471,2.326,1.471h8.896h0.847c0,0,1.883-0.076,1.883,1.914V22.238z"
-                    fill="#48464d" /></svg>
-              </div>
+
+        </mat-tab>
+
+        <mat-tab label="Трейлеры">
+          <div class="treiler" *ngFor="let video of videos" >
+            <h2>{{ video.name }}</h2>
+            <div class="frame">
+              <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl(youtubePath + video.key)" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
             </div>
+          </div>      
+        </mat-tab>  
 
-
-      </mat-tab>
-      <mat-tab label="Трейлеры">
-                    <div class='info'>
-              <div class="title">
-                <h2>{{film.title}}</h2>
-
-                <div class="popularity-circle">
-                  <div class="popularity">
-                    <label>{{film.vote_average}}</label>
-                    <mat-progress-spinner class="example-margin" [mode]="mode" [value]="film.vote_average * 10">
-                    </mat-progress-spinner>
-                  </div>
-                </div>
-              </div>
-              <p class='year'>{{film.release_date | date: 'dd MMMM yyyy'}}</p>
-              <p class="genre">Жанр:
-                <span *ngFor="let genre of film.genres">
-                  <span>{{genre.name}} / </span>
-                </span>
-              </p>
-              <p class="description">
-                {{ (film.overview.length > 700) ? (film.overview | slice:0:700) + '...' : (film.overview) }}</p>
-
-              <a class="homepage" [href]="film.homepage" target="_blank">{{film.homepage}}</a>
-              <p class="budget">Бюджет фильма: {{film.budget}}$ </p>
-
-              <div class="production_companies">
-                <span *ngFor="let production_companie of film.production_companies">
-                  <img src="{{smallImgPath + production_companie.logo_path}}" alt="">
-                </span>
-              </div>
-              <div class="backdrop">
-                <img src="{{midBackPath + film.backdrop_path}}" alt="">
-              </div>
-
-              <div class="btn-back" (click)="backOnAllActor()">
-                <svg enable-background="new 0 0 48 48" height="48px" id="Layer_1" version="1.1" viewBox="0 0 48 48" width="48px"
-                  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <path
-                    d="M24,0C10.745,0,0,10.745,0,24s10.745,24,24,24s24-10.745,24-24S37.255,0,24,0z M36.804,22.238v3.033v0.479  c-0.05,0.689-0.435,2.15-2.812,2.15h-9.459c-1.744,0-1.682-1.309-1.682-1.309v-0.076c0-1.037,1.039-1.218,1.561-1.244h7.912  c1.405,0,1.699-0.684,1.75-1.117v-0.539c0-1.135-0.846-1.346-1.32-1.377h-9.902h-0.29c-1.607,0-2.113-0.866-2.27-1.506l-0.002,0.001  c0,0-0.158-0.896-1.043-0.167l-3.426,2.822c0,0-0.009,0.009-0.012,0.01l-0.05,0.041c-0.244,0.209-1.094,1.054,0.06,1.867  l2.797,1.969l0.02,0.014l1.587,1.117v-0.033l1.32,0.902c1.319,0.904,1.309,2.396,1.309,2.396v0.342c0,0-0.161,1.332-1.458,0.422  l-9.431-6.638c0,0,0-0.001-0.001-0.001c-1.721-1.211-0.004-2.668,0-2.672l8.904-7.339c1.969-1.622,1.985,0.929,1.985,0.929v1.525  c0.078,0.572,0.491,1.471,2.326,1.471h8.896h0.847c0,0,1.883-0.076,1.883,1.914V22.238z"
-                    fill="#48464d" /></svg>
-              </div>
-            </div>
-      </mat-tab>     
-    </mat-tab-group>
+      </mat-tab-group>
 
     </section>
   </div>
