add cards crew in films deteils

--- a/practice/src/app/shared/components/film-details/film-details.component.html
+++ b/practice/src/app/shared/components/film-details/film-details.component.html
@@ -50,18 +50,17 @@
 
     <section>
       <mat-tab-group dynamicHeight>
+
         <mat-tab label="Актеры" >
           <div class="actors" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
             <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor" *ngFor="let actor of casts"></app-actor-item>
-          </div>     
-
-
+          </div>  
         </mat-tab>
 
-        <mat-tab label="Съемочная группа">
-              
-
-
+        <mat-tab label="Съемочная группа"> 
+          <div class="actors" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+            <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor" *ngFor="let actor of crews"></app-actor-item>
+          </div>
         </mat-tab>
 
         <mat-tab label="Трейлеры">
@@ -74,7 +73,6 @@
         </mat-tab>  
 
       </mat-tab-group>
-
     </section>
   </div>
 
