--- a/practice/src/app/shared/components/actor-item/actor-item.component.scss
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.scss
@@ -20,13 +20,19 @@
 
   .name {    
     text-align: center;
-
     margin: auto;    
     height: 40px;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
     h2 {
       font-size: 12px !important;
+      margin: 0;
+    }
+    p {
+      font-size: 10px;
+      margin: 0;
     }
   }
 
