--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -3,12 +3,10 @@
     <div>
       <div>     
         <ng-container *ngIf="showDetails">                 
-          <app-film-details [data]="film" [video]="video" [cast]="cast" [crew]="crew"></app-film-details>
+          <app-film-details [data]="film"></app-film-details>
         </ng-container>      
         <ng-container *ngIf="!showDetails">
-          <app-actor-details [data]="actor" [actorKnownFor]="actorKnownFor"></app-actor-details>   
-          
-                 
+          <app-actor-details [data]="actor" [actorKnownFor]="actorKnownFor"></app-actor-details>  
         </ng-container>
       </div> 
   </div>
