--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -11,5 +11,6 @@
             </div>
         </div>
     </div>
+</div>
 
-    <app-spiner *ngIf="spiner"></app-spiner>
+<app-spiner *ngIf="spiner"></app-spiner>
