--- a/practice/src/app/shared/components/actor-details/actor-details.component.html
+++ b/practice/src/app/shared/components/actor-details/actor-details.component.html
@@ -42,11 +42,11 @@
     </div>
 
   </section>
-  <section class="cards-known-for">
+  <!-- <section class="cards-known-for">
     <app-film-item class="" fxFlex="32%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film.known_for"
       *ngFor="let film of actor.knownFor">
     </app-film-item>
-  </section>
+  </section> -->
 
 
 </div>
