--- a/practice/src/app/shared/components/actor-details/actor-details.component.scss
+++ b/practice/src/app/shared/components/actor-details/actor-details.component.scss
@@ -1,30 +1,31 @@
 .cards {
-    background: #fff;
-   
-    border-radius: 4px;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
-                0 1px 1px 0 rgba(0, 0, 0, .14),
-                0 1px 3px 0 rgba(0, 0, 0, .12);
-    width: 80%;
-    margin: 50px auto;
-    min-width: 1000px;
-    section {
-      display: flex;
-      justify-content: space-evenly;
-    }
+  background: #fff;
+
+  border-radius: 4px;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
+    0 1px 1px 0 rgba(0, 0, 0, .14),
+    0 1px 3px 0 rgba(0, 0, 0, .12);
+  width: 80%;
+  margin: auto;
+  min-width: 1200px;
+
+  section {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
 
 p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .foto {
-  width: 35%;
+  width: 30%;
   display: flex;
 }
 
 .info {
-  width: 65%;
+  width: 70%;
 }
 
 .cards img {
@@ -37,67 +38,72 @@ p {
 
 
 .info {
-    padding: 2%;
-    position: relative;
-    text-align: left;
+  padding: 2%;
+  position: relative;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+
+  .name {
     display: flex;
-    flex-direction: column;  
+    align-items: center;
 
-    .name {
-      display: flex;
-      align-items: center;
-      h2 {
-        margin: 0;
-        font-size: 2vw;
-      }
-      div {
-        margin-left: 10px;
-        width: 50px !important;
-        height: 50px;
-        .popularity {
-          position: absolute;  
-          background: #f4f4f4;
-          border-radius: 50%;
-          label {
-            position: absolute;
-            font-size: .6em;
-            font-weight: 500;
-            transform: translate(-50%, -50%);
-            top: 50%;
-            left: 50%;
-          }      
+    h2 {
+      margin: 0;
+      font-size: 2vw;
+    }
+
+    div {
+      margin-left: 10px;
+      width: 50px !important;
+      height: 50px;
+
+      .popularity {
+        position: absolute;
+        background: #f4f4f4;
+        border-radius: 50%;
+
+        label {
+          position: absolute;
+          font-size: .6em;
+          font-weight: 500;
+          transform: translate(-50%, -50%);
+          top: 50%;
+          left: 50%;
         }
       }
-
     }
 
+  }
 
 
-    .year {
-        span {
-            font-size: 1.1em;
-            font-weight: 900;
-            margin: .25em 0;
-            color: silver;
-        }
+
+  .year {
+    span {
+      font-size: 1.1em;
+      font-weight: 900;
+      margin: .25em 0;
+      color: silver;
     }
+  }
 
 
 
-    .place_of_birth {
-        font-weight: 100;
-    }
+  .place_of_birth {
+    font-weight: 100;
+  }
 
-    .biography {
-        font-size: .8em;
-    }
+  .biography {
+    font-size: .8em;
+  }
 
   .btn-back {
-    position: absolute;    
+    position: absolute;
     right: 3.5%;
     opacity: .2;
     cursor: pointer;
     transition: opacity .5s;
+
     &:hover {
       opacity: 1;
     }
@@ -139,4 +145,3 @@ p {
 .cards-known-for {
   padding: 10px 0;
 }
-
