--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -56,13 +56,9 @@ h2 {
 }
 
 .mat-card-actions {
-  // position: absolute;
-  // bottom: 0;
-  // left: 0;
   width: 100%;
-  // margin: 0;
-  // text-align: center;
   display: flex;
   justify-content: space-between;
-
+  padding: 0;
+  margin: 0;
 }
