work with film cards

--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -8,8 +8,8 @@
       <h2>{{ film.title }}</h2>
       <p class="year">{{ film.release_date | date: 'dd MMMM yyyy' }}</p>
       <!-- <p class="genre">Жанр:
-        <span *ngFor="let genre of film.deteils.genres">
-          <span>{{genre.name}} / </span>
+        <span *ngFor="let genre of film.genre_ids">
+          <span>{{genre}} / </span>
         </span>
       </p> -->
 
