--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -37,14 +37,14 @@ h2 {
 }
 
 .year {
-  font-size: .8em;
+  font-size: .7vw;
   font-weight: 900;
   margin: .25em 0;
   color: silver;
 }
 
 .description {
-  font-size: 9px;
+  font-size: .7em;
 }
 
 .btn-block {
@@ -61,4 +61,38 @@ h2 {
   justify-content: space-between;
   padding: 0;
   margin: 0;
+}
+
+
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+
+  .popularity-circle {
+    position: relative;
+    margin-left: 20px;
+    width: 35px !important;
+    height: 35px;
+
+    .popularity {
+      position: absolute;
+      background: #f4f4f4;
+      border-radius: 50%;
+      right: 0;
+      width: 35px !important;
+      height: 35px;
+
+      label {
+        position: absolute;
+        font-size: .8em;
+        font-weight: 500;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+      }
+    }
+  }
 }
