--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -31,8 +31,8 @@ mat-card {
   background: rgb(68, 68, 73);
   color: #fff;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
-              0 1px 1px 0 rgba(0, 0, 0, .14),
-              0 1px 3px 0 rgba(0, 0, 0, .12);
+    0 1px 1px 0 rgba(0, 0, 0, .14),
+    0 1px 3px 0 rgba(0, 0, 0, .12);
 }
 
 .mat-toolbar-row {
@@ -58,7 +58,7 @@ mat-card {
   margin: 0 auto;
   overflow-y: overlay;
   height: 93vh;
-  overflow-x: hidden;  
+  overflow-x: hidden;
   margin-top: 64px;
 }
 
@@ -90,16 +90,18 @@ router-outlet~* {
 
 
 .mat-snack-bar-container {
-  color:#fff;
+  color: #fff;
   text-transform: uppercase;
   text-align: center;
   font-size: 0.8em;
   display: flex !important;
   justify-content: center;
   align-items: center;
+
   &.error {
     background: #FF0000;
   }
+
   &.success {
     background: #008000;
   }
@@ -110,10 +112,12 @@ router-outlet~* {
   .mat-progress-spinner {
     width: 100% !important;
     height: 100% !important;
+
     svg {
       width: 100% !important;
       height: 100% !important;
-       circle {
+
+      circle {
         stroke: #46454b;
         stroke-width: 12% !important;
       }
@@ -121,18 +125,21 @@ router-outlet~* {
   }
 }
 
+.width-sircle-25 {
+  .mat-progress-spinner {
+    svg {
+      circle {
+        stroke-width: 25% !important;
+      }
+    }
+  }
+}
+
 app-search {
   margin-left: 30px;
-  .mat-flat-button {    
+
+  .mat-flat-button {
     line-height: 30px;
     padding: 0 10px;
   }
 }
-
-
-
-
-
-
-
-
