done film cards item

--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -40,7 +40,8 @@ h2 {
   font-size: .7vw;
   font-weight: 900;
   margin: .25em 0;
-  color: silver;
+  color: #58575d;
+  text-align: right;
 }
 
 .description {
