--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -11,9 +11,9 @@
 
         <div class="popularity-circle">
           <div class="popularity width-sircle-25">
-            <!--  {{film.deteils.vote_average}} -->
-            <label>10</label>
-            <mat-progress-spinner class="example-margin" [mode]="mode" [value]="5">
+
+            <label>{{film.vote_average}}</label>
+            <mat-progress-spinner class="example-margin" [mode]="mode" [value]="film.vote_average * 10">
             </mat-progress-spinner>
           </div>
         </div>
@@ -21,7 +21,7 @@
       </div>
 
 
-      <p class="year">{{ film.release_date | date: 'dd MMMM yyyy' }}</p>
+      <p class="year">{{ film.release_date | date: 'MMMM d, y' : 'ru' }}</p>
       <!-- <p class="genre">Жанр:
         <span *ngFor="let genre of film.genre_ids">
           <span>{{genre}} / </span>
