--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -22,6 +22,7 @@ mat-card {
 .mat-button,
 .mat-form-field,
 .mat-option,
+.mat-tab-label-content,
 .mat-raised-button {
   font-family: 'Montserrat', sans-serif;
 }
@@ -143,4 +144,9 @@ app-search {
     line-height: 30px;
     padding: 0 10px;
   }
+}
+
+.mat-tab-group.mat-primary .mat-ink-bar,
+.mat-tab-nav-bar.mat-primary .mat-ink-bar {
+  background-color: #46454b;
 }
