--- a/practice/src/app/films-catalog/main/main.component.html
+++ b/practice/src/app/films-catalog/main/main.component.html
@@ -1,23 +1,18 @@
-<div *ngIf="!spiner" class="cards-section" >
+<div *ngIf="!spiner" class="cards-section">
   <div>
     <div>
-      
+
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <h2>Популярные фильмы</h2>
         <button mat-raised-button routerLink="/films">Посмотреть все фильмы</button>
       </div>
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-        <mat-card
-          class="mb-2em" 
-          fxFlex="15%" 
-          fxFlex.lt-md="45%" 
-          fxFlex.lt-sm="100%"      
-          *ngFor="let film of films">
+        <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let film of films">
           <div>
             <img src="{{imgUrl + film.poster_path}}" alt="">
           </div>
         </mat-card>
-      </div>  
+      </div>
     </div>
 
     <div>
@@ -34,7 +29,7 @@
       </div>
     </div>
 
-</div>
+  </div>
 
 </div>
 
