--- a/practice/src/app/films-catalog/actors-list/actors-list.component.scss
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.scss
@@ -7,8 +7,9 @@
 
 .cards-header {
   padding: 0 32px;
-  margin: 30px auto;
+  margin: 0 auto;
   max-width: 1100px;
+  margin-bottom: 15px;
 
   div {
     display: flex;
@@ -22,4 +23,11 @@
       margin-left: 20px;
     }
   }
+}
+
+.btn-back {
+  padding: 0 32px;
+  margin: 0 auto;
+  max-width: 1100px;
+  margin-top: 30px;
 }
