work with film favorite cards

--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -68,6 +68,13 @@
         </ng-template>
       </ng-container>
 
+
+      <ng-container *ngIf="!favorites">
+        <button mat-icon-button (click)="addToFavorites()">
+          <i class="material-icons">delete_forever</i>
+        </button>
+      </ng-container>
+
     </mat-card-actions>
   </div>
 </div>
