--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -9,6 +9,33 @@
   }
 }
 
-button {
-  margin: auto;
+// button {
+//   margin: auto;
+// }
+
+.cards-header {
+  padding: 0 32px;
+  margin: 0 auto;
+  max-width: 1200px;
+  margin-bottom: 10px;
+
+  div {
+    display: flex;
+    align-items: center;
+
+    p {
+      padding-top: 5px;
+    }
+
+    button {
+      margin-left: 20px;
+    }
+  }
+}
+
+.btn-back {
+  padding: 0 32px;
+  margin: 0 auto;
+  max-width: 1200px;
+  margin-top: 30px;
 }
