add animation to favorite cards

--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -1,4 +1,4 @@
-<div class="cards">
+<div class="cards" [ngClass]="{'hideCards': hide}">
   <div>
     <img src="{{ imgUrl + film.poster_path }}" alt="" />
   </div>
