--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -1,6 +1,6 @@
 .cards-section {
   .cards {
-    margin: 30px auto;
+    margin: 0 auto;
     max-width: 1200px;
 
     .film-item {
@@ -8,10 +8,6 @@
     }
   }
 }
-
-// button {
-//   margin: auto;
-// }
 
 .cards-header {
   padding: 0 32px;
@@ -38,4 +34,8 @@
   margin: 0 auto;
   max-width: 1200px;
   margin-top: 30px;
+}
+
+.btn-section {
+  margin: 20px 0 40px;
 }
