--- a/practice/src/app/shared/components/pagination/pagination.component.html
+++ b/practice/src/app/shared/components/pagination/pagination.component.html
@@ -1,8 +1,8 @@
 <div class="pagination" *ngIf="count > 0">
-  <div class="description">
+  <!-- <div class="description">
     <span class="page-counts">{{ getMin() }} - {{ getMax() }} of {{ count }}</span>
     <span class="page-totals">{{ totalPages() }} pages</span>
-  </div>
+  </div> -->
   <div class="numbers">
     <button class="link" (click)="onPrev()" [disabled]="page === 1 || loading"
       [ngClass]="{ 'disabled': page === 1 || loading }">&lt; Previous</button>
