--- a/practice/src/app/shared/components/pagination/pagination.component.scss
+++ b/practice/src/app/shared/components/pagination/pagination.component.scss
@@ -1,12 +1,10 @@
-:host {
-  flex: 0 0 30px;
-  display: flex;
+
 
   .pagination {
     width: 100%;
     position: relative;
     flex: 1;
-    background: grey;
+    // background: grey;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -31,7 +29,7 @@
         flex: 0 0 auto;
         outline: none;
         border: 0;
-        padding: 0 (20% / 2);
+        // padding: 0 (20% / 2);
         background: transparent;
         cursor: pointer;
 
@@ -46,4 +44,4 @@
       }
     }
   }
-}
+
