work with pagination component

--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -35,10 +35,11 @@
   margin-top: 30px;
 }
 
-.btn-section {
-  margin: 20px 0 40px;
-}
+// .btn-section {
+//   margin: 20px 0 40px;
+// }
 
 .pagination-section {
+  margin: 20px 0 40px;
   width: 100%;
 }
