--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -16,10 +16,10 @@
       (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
     </app-film-item>
 
-    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+    <!-- <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
       <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]='isDisabledFilmsBtn'>Показать
         еще</button>
-    </div>
+    </div> -->
 
     <div class="pagination-section">
 
@@ -28,6 +28,7 @@
         (goNext)="onNext()"
         (goPrev)="onPrev()"
         [pagesToShow]="10"
+        
         [page]="pagePag"
         [perPage]="limit"
         [count]="total">
