--- a/practice/src/app/shared/components/pagination/pagination.component.html
+++ b/practice/src/app/shared/components/pagination/pagination.component.html
@@ -5,7 +5,7 @@
   </div> -->
   <div class="numbers">
     <button class="link" (click)="onPrev()" [disabled]="page === 1 || loading"
-      [ngClass]="{ 'disabled': page === 1 || loading }">&lt; Previous</button>
+      [ngClass]="{ 'disabled': page === 1 || loading }">&lt; Prev</button>
 
     <button *ngFor="let pageNum of getPages()" (click)="onPage(pageNum)"
       [ngClass]="{'active': pageNum === page, 'disabled': loading}">{{ pageNum }}</button>
